--- a/scss/_bio.scss
+++ b/scss/_bio.scss
@@ -1,36 +1,39 @@
 .bio {
-    min-height: 190px;
-    display: flex;
-    align-items: center;
-    &__wrapper {
-        width: 1200px;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-    }
-
+    height: 290px;
+    margin-top: 100px;
+    padding: 120px 0 107px 0;
+    background: #F6F6F6;
     &__title {
-        display: flex;
-        width: 180px;
-        height: 120px;
-        font-size: 47px;
-        font-weight: 500;
-        margin: 0;
-        align-items: flex-end;
+        margin: 0 auto;
     }
 
-    &__subtitle {
-        width: 155px;
-        height: 66px;
-        margin: 0;
-        font-size: 18px;
+    &__descr-one {
+        width: 480px;
+        margin: 0 auto;
+        margin-top: 17px;
+        font-size: 20px;
         line-height: 22px;
+        text-align: center;
+        color: #070707;
     }
 
-    &__lang {
-        position: relative;
-        left: 20px;
-        transform: rotate(-90deg);
+    &__descr-two {
+        width: 400px;
+        margin: 0 auto;
+        margin-top: 50px;
+        font-size: 20px;
+        line-height: 22px;
+        text-align: center;
+        color: #070707;
     }
-    
+
+    &__descr-three {
+        width: 350px;
+        margin: 0 auto;
+        margin-top: 50px;
+        font-size: 20px;
+        line-height: 22px;
+        text-align: center;
+        color: #070707;
+    }
 }
